--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Alex">
+        <meta name="description" content="This page contains my html lessons.">
+        <link rel="icon" href="images/favicon.png" type="image/x-icon">
         <title>
             My webpage
         </title>
