Create new style for index.html

--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
         <meta charset="UTF-8">
         <meta name="author" content="Alex">
         <meta name="description" content="This page contains my html lessons.">
+        <link rel="stylesheet" href="main.css" type="text/css" >
         <link rel="icon" href="images/favicon.png" type="image/x-icon">
         <title>
             My webpage
         </title>
-        <style>
-            html {
-                font-size: 22px;
-            }
-
-            body {
-                background-color: darkgrey;
-                color: whitesmoke;
-            }
-        </style>
+        
     </head>
     <body>
         <h1>Hello world!</h1>
