--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     </head>
     <body>
         <h1>Hello world!</h1>
-        <p>First paragraph on my webpage.</p>
+        <p>Paragraph on my webpage.</p>
+
+        <h2>Hello world!</h2>
+        <p>Paragraph on my webpage.</p>
+
+        <h3>Hello world!</h3>
+        <p>Paragraph on my webpage.</p>
+
+        <h4>Hello world!</h4>
+        <p>Paragraph on my webpage.</p>
+
+        <h5>Hello world!</h5>
+        <p>Paragraph on my webpage.</p>
+
+        <h6>Hello world!</h6>
+        <p>Paragraph on my webpage.</p>
+
+        <hr>
+
     </body>
 </html>
