Add more content to index.html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
     </head>
     <body>
         <h1>Hello world!</h1>
-        <p>Paragraph on my webpage.</p>
+        <p>Paragraph on my webpage. 
+            <br>&nbsp;&nbsp;&nbsp; Paragraph on my webpage.
+            <br> &nbsp;&nbsp;&nbsp;Paragraph on my webpage.
+            <br> Paragraph on my webpage.
+            <br> &nbsp;&nbsp;&nbsp;Paragraph on my webpage.
+            <br> <abbr title="Mozilla Developer Network">MDN</abbr> is a great company
+        </p>
 
         <h2>Hello world!</h2>
         <p>Paragraph on my webpage.</p>
+        <p>Paragraph on my <em>webpage</em>.</p>
+        <p>Paragraph on my <strong>webpage</strong> .</p>
+        <p>Paragraph on my webpage.</p>
 
+        <!-- TODO: Add more places to visit -->
         <h3>Hello world!</h3>
         <p>Paragraph on my webpage.</p>
+        <p>I've heard good thing about going here:
+            <address>
+                Colonia Morelos, Mexico 77580<br>
+            </address>
 
         <h4>Hello world!</h4>
         <p>Paragraph on my webpage.</p>
@@ -31,6 +45,6 @@
         <p>Paragraph on my webpage.</p>
 
         <hr>
-
+        &lt;&lt;&lt;&lt; &copy; Alex Hart &gt;&gt;&gt;&gt;
     </body>
 </html>
