--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <body>
         <h1>Hello world!</h1>
         <p>Paragraph on my webpage. 
-            <br>&nbsp;&nbsp;&nbsp; Paragraph on my webpage.
-            <br> &nbsp;&nbsp;&nbsp;Paragraph on my webpage.
+            
             <br> Paragraph on my webpage.
             <br> &nbsp;&nbsp;&nbsp;Paragraph on my webpage.
-            <br> <abbr title="Mozilla Developer Network">MDN</abbr> is a great company
+            <br> <abbr title="Mozilla Developer Network">
+                    <a href="https://developer.mozilla.org">MDN</a>
+                </abbr> is a great company
         </p>
 
         <h2>Hello world!</h2>
@@ -26,6 +27,32 @@
         <p>Paragraph on my <em>webpage</em>.</p>
         <p>Paragraph on my <strong>webpage</strong> .</p>
         <p>Paragraph on my webpage.</p>
+
+        <p>Unordered list:</p>
+        <ul>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+        </ul>
+        <p>Ordered list:</p>
+        <ol>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+        </ol>
+
+        <h3>Places I want to avoid</h3>
+        <dl>
+            <dt>North Pole</dt>
+                <dd>I hear this is <strong>cold</strong>!</dd>
+            <dt>Mountain Tops</dt>
+                <dd>These are also cold.</dd>
+                
+        </dl>
 
         <!-- TODO: Add more places to visit -->
         <h3>Hello world!</h3>
@@ -45,6 +72,6 @@
         <p>Paragraph on my webpage.</p>
 
         <hr>
-        &lt;&lt;&lt;&lt; &copy; Alex Hart &gt;&gt;&gt;&gt;
+        &lt;&lt;&lt;&lt; &copy; <a href="about.html">Alex Hart</a> &gt;&gt;&gt;&gt;
     </body>
 </html>
