Add links to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     </head>
     <body>
         <h1>Hello world!</h1>
+
+        <hr>
+        
+        <nav>
+            <ul>
+                <li>
+                    <a href="#vacation">vacation</a>
+                </li>
+            </ul>
+        </nav>
+
+
+        <hr>
+
+        <section>
         <p>Paragraph on my webpage. 
             
             <br> Paragraph on my webpage.
@@ -23,6 +38,7 @@
         </p>
 
         <h2>Hello world!</h2>
+
         <p>Paragraph on my webpage.</p>
         <p>Paragraph on my <em>webpage</em>.</p>
         <p>Paragraph on my <strong>webpage</strong> .</p>
@@ -44,6 +60,7 @@
             <li>List item</li>
             <li>List item</li>
         </ol>
+        </section>
 
         <h3>Places I want to avoid</h3>
         <dl>
@@ -68,10 +85,13 @@
         <h5>Hello world!</h5>
         <p>Paragraph on my webpage.</p>
 
-        <h6>Hello world!</h6>
+        <h6 id="vacation">Hello world!</h6>
         <p>Paragraph on my webpage.</p>
-
+                <!-- entities in html -->
         <hr>
         &lt;&lt;&lt;&lt; &copy; <a href="about.html">Alex Hart</a> &gt;&gt;&gt;&gt;
+        <p>
+            <a href="#">Back to top</a>
+        </p>
     </body>
 </html>
