--- a/about.html
+++ b/about.html
@@ -25,6 +25,21 @@
         </p>
         <hr>
 
+        <ul>
+            <li>
+                Download an <a href="images/favicon.png" download="css3">Download file
+            </li>
+            <li>
+                Dial <a href="tel:+123456789">my phone number</a>
+            </li>
+            <li>
+                <a href="https://www.google.com" target="_blank">Google</a>
+            </li>
+        </ul>
+
+        <p>
+            <a href="index.html">Back to home</a>
+        </p>
         
         <script src="" async defer></script>
     </body>
